<resources>
    <string name="app_name">Keep</string>
    <string name="color">Color</string>
    <string name="cancel">Cancel</string>
    <string name="create_list">Create list</string>
    <string name="completed">Completed</string>
    <string name="add_a_task">Add a task</string>
    <string name="add_the_task_button">Add the task button</string>
    <string name="save">Save</string>
    <string name="delete_the_task">Delete the task</string>
    <string name="delete_the_list">Delete the list</string>
    <string name="delete">Delete</string>
    <string name="confirm_message">\"%1$s!\" will be permanently deleted.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="task_title">task title</string>
    <string name="keep_up_the_good_work">Keep up the good work</string>
</resources>